[package]
name = "main"
version = "0.1.0"
authors = ["Discookie <matekos17@fazekas.hu>"]
edition = "2018"

[dependencies]
hashbrown = "0.2"
crossbeam-channel = "0.3"
midichan_core = { path = "../midichan_core", version = "0.1" }
physical = { path = "../interface/physical", version = "0.1" }
launchpad = { path = "../devices/launchpad", version = "0.1" }
select = { path = "../apps/select", version = "0.1" }
simple = { path = "../apps/simple", version = "0.1" }
