[package]
name = "main"
version = "0.1.0"
authors = ["Discookie <matekos17@fazekas.hu>"]
edition = "2018"

[features]
default = ["x"]

mini = ["launchpad", "select", "simple", "chain_reaction"]

x = ["launchpad-x", "launchpad-x-select", "launchpad-x-simple", "launchpad-x-chain-reaction"]

[dependencies]
hashbrown = "0.2"
crossbeam-channel = "0.3"
midichan_core = { path = "../midichan_core", version = "0.1" }
physical = { path = "../interface/physical", version = "0.1" }

launchpad = { path = "../devices/launchpad", version = "0.1", optional = true }
select = { path = "../apps/select", version = "0.1", optional = true }
simple = { path = "../apps/simple", version = "0.1", optional = true }
chain_reaction = { path = "../apps/chain_reaction", version = "0.1", optional = true }

launchpad-x = { path = "../devices/launchpad-x", version = "0.1", optional = true }
launchpad-x-select = { path = "../apps/launchpad-x/select", version = "0.1", optional = true }
launchpad-x-simple = { path = "../apps/launchpad-x/simple", version = "0.1", optional = true }
launchpad-x-chain-reaction = { path = "../apps/launchpad-x/chain-reaction", version = "0.1", optional = true }
